Styling Issues
Font too small
Date on the side wastes space

--- a/Styling/contact.css
+++ b/Styling/contact.css
@@ -38,7 +38,6 @@ main {
     margin: 20px;
     text-align: left;
     line-height: 1.75;
-    font-size: .9rem;
 }
 
 .article_border_left {
