--- a/Styling/index.css
+++ b/Styling/index.css
@@ -3,7 +3,7 @@ body {
     margin: auto;
     background-color: rgb(29, 28, 28);
     color: antiquewhite;
-    font-family: sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     max-width: 700px;
 }
 
@@ -39,7 +39,6 @@ main {
     margin: 20px;
     text-align: left;
     line-height: 1.75;
-    font-size: .9rem;
 }
 
 .card {
@@ -48,17 +47,6 @@ main {
     border-bottom-width: 1px;
     display: flex;
     align-items: center;
-}
-
-.card-date {
-    min-width: 80px;
-}
-
-.divider {
-    height: 100px;
-    border-left: antiquewhite;
-    border-style: solid;
-    border-width: 1px;
 }
 
 .card-title {
